stylesheets/layout.css
.wrapper {
  width: 750px;
  margin: 0 auto;
  position: relative;
}

.nav-header {
  /*padding: 10px 0 10px 0;*/
  margin: 0;
  text-align: center;
  background: url(../images/background.png) #4276b6;
  border-bottom: 6px solid #2D5891;
  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.25);
  -webkit-font-smoothing: antialiased;
}

.nav-header h1 {
  margin: 0 auto;
}

.nav-header h1 img {
  height: 100px;
}

.nav-header p {
  color: #d8d8d8;
  color: white;
  text-shadow: rgba(0, 0, 0, 0.2) 0 1px 0;
  font-size: 18px;
  margin: 0px;
}

.social-buttons {
  margin-bottom: 20px;
}

.social-buttons .button {
  font-size: 14px;
  background: #2D5891;
  padding: 9px 13px;
  border-radius: 20px;
  margin-left: 10px;
}

.social-buttons .button:hover {
  background-color: #1d3871;
}

.social-buttons .button strong {
  color: #fff;
  text-shadow: 0px 2px 0px #235796;
}

.social-button-twitter {
  float: right;
}

nav {
  position: absolute;
  width: 175px;
  top: 10px;
  left: 50%;
  margin-left: -540px;
}

nav ul {
  list-style-image: url("../images/bullet.png");
  font-size: 14px;
  line-height: 24px;
}

nav ul li {
  padding: 5px 0px;
  margin-left: 1em;
  line-height: 16px;
}

nav ul li.tag-h1 {
  font-size: 1.2em;
  list-style: none;
  margin-left: 0;
}

nav ul li.tag-h1 a {
  font-weight: bold;
  color: #333;
}

nav ul li.tag-h2 + .tag-h1 {
  margin-top: 10px;
}

nav ul a {
  color: #666;
}

nav ul a:hover {
  color: #666;
  text-decoration: underline;
}

section {
  width: 690px;
  padding: 30px;
  margin: 40px 0 20px 0;
  position: relative;
  background: #fbfbfb;
  border-radius: 3px;
  border: 1px solid #cbcbcb;
  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.09), inset 0px 0px 2px 2px rgba(255, 255, 255, 0.5), inset 0 0 5px 5px rgba(255, 255, 255, 0.4);
}

footer {
  bottom: 20px;
}

.downloads {
  margin-bottom: 100px;
}

.downloads h3 {
  text-align: center;
}

.dl-button {
  margin: 0;
  text-transform: none;
  top: 9px;
  right: 10px;
  width: 145px;
  padding: 8px 8px 8px 13px;
  background-color: rgba(188, 122, 152, 0.95);
  color: #fff;
  margin: 0 auto;
  display: block;
  text-align: center;
}

.dl-button.secondary {
  background-color: #d6ba8d;
  border-color: #cca291;
}

.download-block {
  width: 165px;
  height: 205px;
  margin-left: 5px;
  display: inline-block;
  vertical-align: top;
}

.download-block.first {
  margin-left: 0;
}

.download-block p {
  padding-left: 2px;
}

.dl-button:hover {
  color: #c4baa6;
}

.dl-button.secondary:hover {
  color: #b5679c;
}

.primary-downloads {
  margin-left: 170px;
}

.primary-downloads p, .primary-downloads ul {
  width: 340px;
  text-align: center;
}

.primary-downloads .download-block {
  height: 165px;
}

.primary-downloads .download-block:last-child {
  height: 40px;
}

.primary-downloads ul {
  list-style: none;
}


/*@media only screen and (max-width: 1060px) {
  div.wrapper {
    width: auto;
    margin: 0;
  }
  nav {
    display: none;
  }
  section {
    margin: 30px auto 20px;
  }
  footer {
    text-align: center;
  }
}
*/

.nav-header {
  background-color: rgba(188, 122, 152, 0.95);
  border-bottom: 0;
  height: 40px;
  color: #fff;
  font-family: 'Helvetica';
  position: relative;
  font-size: 18px;
  font-weight: 100;
  -webkit-font-smoothing: subpixel-antialiased;
}

.nav-header .list-wrapper {
  width: 752px;
  margin: 0 auto;
  padding-top: 5px;
}

.nav-header {
  position: fixed;
  z-index: 10;
  top: 0;
  /*-webkit-filter: blur(8px) contrast(0.4) brightness(1.4);*/
}


.nav-header ul {
  padding-left: 1.125em;
}

.nav-header .logo > img {
  margin-top: 7px;
}

.nav-header .logo {
  width: 52px;
  float: left;
}

.nav-header .logo-text {
  text-transform: none;
  margin-right: 15px;
  margin-left: 0;
  padding-left: 0;
}

.nav-header li {
  padding: 0 0.625em;
  float: left;
  list-style-type: none;
  text-transform: uppercase;
}

.nav-header a {
  color: #fff;
}

.nav-header a:hover {
  color: #c4baa6;
}

.nav-header a.active {
  color: #6fcecb;
}

.nav-header h1 {
  /*font-size: 98px;*/
  text-shadow: 2px 2px 3px #111;
}

.nav-header h1, .nav-header p {
  /*color: #eee;*/
}

.page-nav {
  padding: 0;
  margin: 0;
  padding-left: 20px;
}
.page-nav li {
  display: inline;
}

.toggle-navigation {
  margin: 0;
  text-transform: none;
  top: 9px;
  right: 10px;
  width: 48px;
  height: 32px;
  padding: 8px 12px;
  background-color: rgba(188, 122, 152, 0.95);
  border: 1px solid rgba(188, 122, 152, 0.95);
}

.toggle-navigation > .icon-bar {
  display: block;
  width: 22px;
  height: 2px;
  background-color: #fff;
  border-radius: 1px;
}

.toggle-navigation > .icon-bar + .icon-bar {
  margin-top: 4px;
}


.example-screenshot {
  text-align: center;
}

.compare-link-container {
  position: relative;
  visibility: hidden;
}
.compare-link {
  position: absolute;
  top: -60px;
}

.has-feature {
  color: #39AE40;
  text-align: center;
}
.hasnt-feature {
  color: #FF5D55;
  text-align: center;
}

.compare-builders tr td:last-child {
  font-size: 12px;
}

.users {
  text-align: center; }
  .users img {
    display: inline-block;
    padding-right: 40px;
    text-align: left; }

.builders a {
  display: inline-block;
  margin: 0 1em 1em 0;
  width: 9em;
  height: 18px;
  line-height: 1.2;
}
.builders img {
  float: left;
  margin-right: 1em;
  border-radius: 0.2rem;
}
.builders .name {
  font-weight: normal;
  display: block;
}


/* Tablets */
@media only screen and (max-width: 750px) {
  .wrapper {
    width: auto;
  }
  .nav-header {
    width: 100%;
    height: auto;
    margin: 0;
  }
  .nav-header .list-wrapper {
    width: auto;
    padding: 0;
  }
  .nav-header p {
    margin: auto 100px;
  }

  .nav-header ul {
    padding: 0;
  }
  .nav-header .toggle-navigation {
    float: right;
  }

  .nav-header .nav-toggle-content {
    display: none;
  }

  .nav-header li {
    float: none;
    display: list-item;
    padding: 0;
  }
  .nav-header .logo {
    display: inline-block;
    float: none;
    height: 30px;
    width: 40px;
  }
  .nav-header .logo-text {
    margin: 0;
  }
  .nav-header .logo-text-entity {
    position: relative;
    top: -2px;
  }
  .social-buttons .button {
    display: block;
    margin-bottom: 10px;
    font-size: 12px;
  }
  section {
    width: auto;
    margin: 30px 0 0 0;
  }
  .primary-downloads {
    margin-left: auto;
  }
}

/* Phones */
@media only screen and (max-width: 480px) {
  .nav-header h1 img {
    height: 70px;
  }
  .nav-header p {
    font-size: 14px;
    margin: auto 20px;
  }
  .social-buttons {
    position: relative;
    right: auto;
  }
  .social-buttons .button {
    display: inline-block;
    float: none;
    margin-bottom: 20px;
  }
  section {
    padding: 20px;
  }
  .compare-builders {
    font-size: 7px;
  }
  .compare-builders tr th:last-child,
  .compare-builders tr td:last-child {
    display: none;
  }
}

@media only screen and (max-height: 480px) {
  nav {
    display: none;
  }
}

